# ez-screenshotter

./: Dockerfile  pyproject.toml  requirements.txt
ez/: __init__.py  config.py  context.py  main.py  task.py
