[tool.poetry]
name = "ez-screenshotter"
version = "0.1.0"
description = ""
authors = ["duyixian <duyixian1234@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
playwright = "^1.24.0"
pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "Tencent Cloud"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
