[tool.poetry]
authors = ["duyixian <duyixian1234@qq.com>"]
description = ""
license = "MIT"
name = "ez-screenshotter"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.79.0"
pillow = "^9.2.0"
playwright = "^1.24.0"
python = "^3.10"
uvicorn = "^0.18.2"
uvloop = "^0.16.0"
httptools = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipykernel = "^6.15.1"
isort = "^5.10.1"
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[[tool.poetry.source]]
default = true
name = "Tencent Cloud"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[tool-black]
line-length = 120
